    + remove `if [ "$?" != 0 ]' statements, as they won't work with `set -e';
    + use the standard error for reporting;
    + implement the --stdout, --force, --keep options (closes: #656340,
      LP: #220646, #259239)
    + update p7zip(1) man page to shortly describe new options and give more
      details about the script's behavior.

 -- Robert Luberda <robert@debian.org>  Sat, 05 Mar 2016 23:55:02 +0100

p7zip (15.09+dfsg-2) experimental; urgency=low

  * Hopefully fix FTBFS on various architectures:
    + add 07-endian-detection.patch to detect byte ordering via macros
      defined in <endian.h>.
    + add 08-mips.patch to rename a variable called `mips', as it clashed
      with a name of preprocessor macro defined on mips and mipsel.

 -- Robert Luberda <robert@debian.org>  Mon, 15 Feb 2016 22:53:55 +0100

p7zip (15.09+dfsg-1) experimental; urgency=low

  * New upstream version (closes: #778289, LP: #1414569).
  * Update patches for the new version:
    + remove most of 01-makefile.patch, especially remove the parts related
      to multiarch libwgtk2.8-dev, which is no longer used by this package;
    + fix grammar error (closes: #706005) and update location of html
      documentation in 02-man.patch; do the same for debian/p7zip*.docs
    + drop 04-no-strip-by-default.patch; patch empty OPTFLAGS in debian/rules
      instead;
    + replace CVE-2015-1038.patch with Fedora's version taken from their
      p7zip-15.09-10.fc24.src.rpm package;
    + add 06-s390.patch from Fedora to fix build on s390.
  * Update 03-include-linux-makefile.patch to include arch-specific makefile
    on amd64 (closes: #713964) and i386 archs. Both makefiles have compilation
    of assembler sources enabled, so add build dependency on yasm on those
    architectures.
  * Use DEP-5 format for debian/copyright, and add Files-Excluded header
    into it.
  * Update debian/watch to allow uscan to repack upstream tarballs.