@@ -1,6 +1,8 @@
+*-stamp
+*.debhelper
 *.log
 *.substvars
-*-stamp
 files
 p7zip
 p7zip-full
+tmp
