@@ -1,0 +1,1 @@
+dir_to_symlink /usr/share/doc/p7zip-full /usr/share/doc/p7zip 15.09+dfsg-3~
