@@ -34,7 +34,7 @@ $(stampfile):
 override_dh_auto_install:
 
 override_dh_installdocs:
-	dh_installdocs -Xcopying.txt -XLicense.txt
+	dh_installdocs --link-doc=p7zip -Xcopying.txt -XLicense.txt
 
 override_dh_installchangelogs:
 	dh_installchangelogs -k ChangeLog
